k8s/streamlit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-assistant-streamlit
  namespace: rag-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-assistant-streamlit
  template:
    metadata:
      labels:
        app: rag-assistant-streamlit
    spec:
      containers:
        - name: streamlit
          image: ghcr.io/dibyasha-sahu/rag-internal-docs-assistant:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8501
          command:
            - streamlit
            - run
            - ui/streamlit_app.py
            - --server.address=0.0.0.0
            - --server.port=8501
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          startupProbe:
            httpGet:
              path: /
              port: 8501
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /
              port: 8501
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8501
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
